[gd_scene load_steps=5 format=2]

[ext_resource path="res://MeshInstance.gd" type="Script" id=1]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.94902, 0.94902, 0.94902, 1 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1 )

[node name="MeshInstance" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0321467, 0 )

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody"]
shape = SubResource( 2 )

[connection signal="input_event" from="MeshInstance/StaticBody" to="." method="_on_StaticBody_input_event"]
[connection signal="mouse_entered" from="MeshInstance/StaticBody" to="." method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="MeshInstance/StaticBody" to="." method="_on_StaticBody_mouse_exited"]
